--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ margin: 0;
 }
 
 .circle button {
+    cursor:pointer;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -66,4 +67,23 @@ margin: 0;
 
 .content img {
     max-width: 100%;
+}
+
+.content {
+    max-width: 1000px;
+    margin: 50px auto;
+}
+
+.content h1 {
+    margin: 0;
+}
+
+.content small {
+    color: #555;
+    font-style: italic;
+}
+
+.content p {
+    color: #333;
+    line-height: 1.5;
 }
